--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="daynight">
+      <img src="./moon.svg" alt="" class="svg__moon" />
+      <img src="./sun.svg" alt="" class="svg__sun show" />
+    </div>
     <h1 class="time">2023/11/1</h1>
     <h4 class="date">2023/11/1</h4>
     <script src="./js.js"></script>
